--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -59,7 +59,7 @@ table {
 
 body {
   max-width: 30em;
-  margin: 2em auto;
+  margin: 0 auto;
   padding: 2em;
   box-shadow: 0 0 2px rgba(51, 51, 51, 0.1);
   color: #333333;
