--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,7 +39,7 @@ $vollkorn: 'Vollkorn', serif;
 
 body {
   max-width: 30em;
-  margin: 2em auto;
+  margin: 0 auto;
   padding: 2em;
   box-shadow: 0 0 2px rgba($colorGreyDark, .1);
   color: $colorGreyDark;
