--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -67,14 +67,14 @@ body {
   line-height: 1.5; }
 
 .header {
-  padding: 0 2em; }
+  padding: 1em;
+  background: rgba(241, 241, 241, 0.6); }
 
 .picker {
   appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
   background: none;
-  border: none; }
+  border: none;
+  width: 100%; }
   .picker:hover, .picker:active, .picker:focus {
     outline: 0;
     cursor: pointer; }
@@ -89,18 +89,16 @@ h3, .picker {
   font-size: 2em;
   line-height: 2; }
 
-.list,
-.details {
+.list {
   padding: 0; }
-  .list li,
-  .details li {
+  .list li {
     list-style: none;
     border-top: 1px solid #f1f1f1; }
 
 .item {
   display: block;
   font-size: 1.2em;
-  padding: 0.7em 2em;
+  padding: 0.7em 1em;
   color: #333333;
   overflow: hidden; }
 
@@ -108,29 +106,3 @@ h3, .picker {
   color: #f1f1f1;
   display: inline-block;
   float: right; }
-
-.details {
-  display: none;
-  background: rgba(0, 0, 0, 0.8);
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 2em;
-  border-radius: 3px; }
-  .details.visible {
-    display: block; }
-
-a.dismiss {
-  position: absolute;
-  right: 0;
-  top: 0;
-  color: #f2f2f2;
-  font-size: 2em;
-  line-height: 0;
-  padding: 10px; }
-
-.field {
-  list-style: none;
-  display: block;
-  color: #f2f2f2; }
