--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -49,16 +49,16 @@ body {
 }
 
 .header {
-  padding: 0 2em;
+  padding: 1em;
+  background: rgba($colorGreyLight, .6);
 }
 
 .picker {
+  @extend h3;
   appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
   background: none;
   border: none;
-  @extend h3;
+  width: 100%;
 
   &:hover,
   &:active,
@@ -70,8 +70,6 @@ body {
 
 .template-area { display: none }
 
-section { }
-
 a { text-decoration: none }
 
 h3 {
@@ -79,8 +77,7 @@ h3 {
   line-height: 2;
 }
 
-.list,
-.details {
+.list {
   padding: 0;
 
   li {
@@ -92,7 +89,7 @@ h3 {
 .item {
   display: block;
   font-size: 1.2em;
-  padding: 0.7em 2em;
+  padding: 0.7em 1em;
   color: $colorGreyDark;
   overflow: hidden;
 
@@ -112,35 +109,4 @@ h3 {
   color: $colorGreyLight;
   display: inline-block;
   float: right;
-}
-
-.details {
-  display: none;
-  background: rgba(black, .8);
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 2em;
-  border-radius: 3px;
-
-  &.visible {
-    display: block;
-  }
-}
-
-a.dismiss {
-  position: absolute;
-  right: 0;
-  top: 0;
-  color: $colorWhite;
-  font-size: 2em;
-  line-height: 0;
-  padding: 10px;
-}
-
-.field {
-  list-style: none;
-  display: block;
-  color: $colorWhite;
 }
